--- a/app/src/main/res/layout/activity_admin_login_page.xml
+++ b/app/src/main/res/layout/activity_admin_login_page.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context="com.fab.kh2280.fab.ProductDetails">
+    tools:context="com.fab.kh2280.fab.AdminLoginPage">
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="214dp" />
+        android:text="@string/login"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="149dp" />
+
 </LinearLayout>
