--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
     tools:context="com.fab.kh2280.fab.MainActivity">
 
@@ -18,7 +19,13 @@
             android:id="@+id/shoes_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimary"
+            android:fontFamily="serif"
+            android:text="Shoes"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:typeface="monospace"
+            android:visibility="visible" />
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -33,6 +40,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
+            android:fontFamily="serif"
+            android:text="Wallets"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:typeface="monospace"
             android:backgroundTint="@android:color/holo_blue_dark" />
     </android.support.v7.widget.CardView>
 
@@ -47,7 +59,12 @@
             android:id="@+id/shirts_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimary"
+            android:fontFamily="serif"
+            android:text="Shirts"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:typeface="monospace"/>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
