--- a/app/src/main/res/layout/productlist_item.xml
+++ b/app/src/main/res/layout/productlist_item.xml
@@ -6,16 +6,17 @@
     >
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/productImage"
-        android:src="@android:drawable/btn_star_big_on" />
+        />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:layout_marginLeft="10dp">
 
 
         <TextView
