Updated UI and app theme

--- a/app/src/main/res/layout/activity_admin_login_page.xml
+++ b/app/src/main/res/layout/activity_admin_login_page.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/adminLoginLayout"
-    android:background="@color/colorPrimary"
+    android:background="@color/customAppThemeColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fab.kh2280.fab.AdminLoginPage">
@@ -16,7 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="84dp"
         android:ems="10"
-        android:hint="Username/Email Id"
+        android:hint="@string/username"
+        android:textColorHint="@color/cardview_light_background"
         android:inputType="textPersonName"
         android:padding="20dp"
         android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar"
@@ -31,7 +32,8 @@
         android:layout_below="@+id/usernameTextbox"
         android:layout_marginTop="49dp"
         android:ems="10"
-        android:hint="Password"
+        android:textColorHint="@color/cardview_light_background"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="20dp"
         android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar"
