--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/customAppThemeColor"
     tools:context="com.fab.kh2280.fab.ProductDetails">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:textColor="@color/cardview_light_background"
         tools:layout_editor_absoluteX="121dp"
         tools:layout_editor_absoluteY="214dp" />
 </LinearLayout>
