--- a/app/src/main/res/layout/productlist_item.xml
+++ b/app/src/main/res/layout/productlist_item.xml
@@ -23,12 +23,16 @@
             android:id="@+id/product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/product_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="13sp" />
     </LinearLayout>
 </LinearLayout>
