--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -11,6 +11,9 @@
         android:id="@+id/button_choose_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/text_view_show_uploads"
+        android:layout_alignBottom="@+id/text_view_show_uploads"
+        android:layout_alignParentStart="true"
         android:text="Choose file" />
 
     <EditText
@@ -23,11 +26,11 @@
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/progress_bar"
-        android:layout_below="@id/edit_text_file_name"
-        android:layout_marginTop="16dp" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignBottom="@+id/edit_text_file_name"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="29dp" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
