--- a/app/src/main/res/layout/activity_admin_login_page.xml
+++ b/app/src/main/res/layout/activity_admin_login_page.xml
@@ -17,9 +17,9 @@
         android:layout_marginTop="84dp"
         android:ems="10"
         android:hint="@string/username"
-        android:textColorHint="@color/cardview_light_background"
         android:inputType="textPersonName"
         android:padding="20dp"
+        android:textColorHint="@color/placeholderColor"
         android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar"
         tools:layout_editor_absoluteX="84dp"
         tools:layout_editor_absoluteY="105dp" />
@@ -32,7 +32,7 @@
         android:layout_below="@+id/usernameTextbox"
         android:layout_marginTop="49dp"
         android:ems="10"
-        android:textColorHint="@color/cardview_light_background"
+        android:textColorHint="@color/placeholderColor"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="20dp"
@@ -42,12 +42,13 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/passwordTextbox"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="117dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
+        android:fontFamily="sans-serif"
         android:onClick="onLoginClick"
         android:padding="20dp"
         android:text="@string/login"
