--- a/app/src/main/res/layout/activity_continue_as_guest_or_admin_login.xml
+++ b/app/src/main/res/layout/activity_continue_as_guest_or_admin_login.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_marginTop="175dp"
         android:background="@android:color/transparent"
         android:text="@string/AdminLogin"
