--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,41 +13,48 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        card_view:cardCornerRadius="4dp">
+        android:layout_margin="15dp">
+
 
         <TextView
             android:id="@+id/shoes_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_centerInParent="true"
             android:background="@color/colorPrimary"
             android:fontFamily="serif"
+            android:gravity="center_vertical|center_horizontal"
             android:text="Shoes"
-            android:textColor="@color/cardview_light_background"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+            android:textColor="@color/cardview_light_background"
             android:typeface="monospace"
             android:visibility="visible" />
+
+
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/wallets_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_margin="15dp"
         android:layout_gravity="center"
+        android:layout_below="@id/shoes_view"
         card_view:cardCornerRadius="4dp">
 
         <TextView
             android:id="@+id/wallets_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
+            android:background="@color/cardViewColor"
             android:fontFamily="serif"
+            android:gravity="center_vertical|center_horizontal"
             android:text="Wallets"
-            android:textColor="@color/cardview_light_background"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-            android:typeface="monospace"
-            android:backgroundTint="@android:color/holo_blue_dark" />
+            android:textColor="@color/cardview_light_background"
+            android:typeface="monospace" />
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -55,6 +62,8 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
+        android:layout_below="@id/wallets_view"
+        android:layout_margin="15dp"
         card_view:cardCornerRadius="4dp">
 
         <TextView
@@ -63,11 +72,12 @@
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
             android:fontFamily="serif"
+            android:gravity="center_vertical|center_horizontal"
             android:text="Shirts"
-            android:textColor="@color/cardview_light_background"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Display2"
-            android:typeface="monospace"/>
+            android:textColor="@color/cardview_light_background"
+            android:typeface="monospace" />
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+</RelativeLayout>
