--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="customAppThemeColor">#303f9f</color>
+    <color name="cardViewColor">#003b72</color>
+    <color name="placeholderColor">#d6d7d7</color>
 </resources>
