--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/wallets_view"
+        android:id="@+id/tshirts_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_margin="15dp"
@@ -44,7 +44,7 @@
         card_view:cardCornerRadius="4dp">
 
         <TextView
-            android:id="@+id/wallets_text"
+            android:id="@+id/tshirts_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/cardViewColor"
@@ -58,16 +58,16 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/tshirts_view"
+        android:id="@+id/wallets_view"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_below="@id/wallets_view"
+        android:layout_below="@id/tshirts_view"
         android:layout_margin="15dp"
         card_view:cardCornerRadius="4dp">
 
         <TextView
-            android:id="@+id/tshirts_text"
+            android:id="@+id/wallets_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
